@@ -5,6 +5,6 @@
 
 #include "nfaDef.h"
 
-int grrCompilePattern(const char *string, size_t len, grrNfa *nfa);
+int grrCompile(const char *string, size_t len, grrNfa *nfa);
 
 #endif // __GRR_COMPILER_H__
